--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: devops-app
-        image: <your-dockerhub-username>/devops-app:latest
+        image: sreeyav/devops-app:latest
         ports:
         - containerPort: 3000
         resources:
